[gd_scene load_steps=14 format=3 uid="uid://crc6gtn4umedq"]

[ext_resource type="Script" path="res://Scenes/enemy_2.gd" id="1_dxm1s"]
[ext_resource type="Texture2D" uid="uid://d0kfy23yp1tdx" path="res://Sprites/0x72_DungeonTilesetII_v1.4/0x72_DungeonTilesetII_v1.4.png" id="2_jqo4w"]
[ext_resource type="PackedScene" uid="uid://gb0iqodueojd" path="res://Scenes/hurtbox.tscn" id="3_sq7n3"]
[ext_resource type="PackedScene" uid="uid://c7fgwktel6i43" path="res://Scenes/hitbox.tscn" id="4_nlw3d"]
[ext_resource type="PackedScene" uid="uid://bhfbk3wnobchc" path="res://Scenes/stats.tscn" id="5_s7emu"]
[ext_resource type="PackedScene" uid="uid://f0idmgk5kcu8" path="res://Scenes/player_detection_zone.tscn" id="6_odggs"]

[sub_resource type="Animation" id="Animation_o3xpe"]
resource_name = "Stand"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [119, 120, 121, 122]
}

[sub_resource type="Animation" id="Animation_uua0d"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [123, 124, 125, 126]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l61a0"]
_data = {
"Stand": SubResource("Animation_o3xpe"),
"Walk": SubResource("Animation_uua0d")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o00vh"]
size = Vector2(10.5, 11.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nq5ke"]
size = Vector2(14, 14)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6xx84"]
radius = 4.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ewafe"]
radius = 132.034

[node name="Enemy2" type="CharacterBody2D"]
position = Vector2(-1, -10)
collision_layer = 0
script = ExtResource("1_dxm1s")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_jqo4w")
hframes = 32
vframes = 32
frame = 123

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l61a0")
}

[node name="Hurtbox" parent="." instance=ExtResource("3_sq7n3")]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0.75, 2.75)
shape = SubResource("RectangleShape2D_o00vh")

[node name="Hitbox" parent="." instance=ExtResource("4_nlw3d")]
collision_layer = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_nq5ke")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6xx84")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Stats" parent="." instance=ExtResource("5_s7emu")]
max_health = 60
health = 60

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_odggs")]
collision_layer = 0

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2(1, 10)
shape = SubResource("CircleShape2D_ewafe")

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
